[project]
name = "pii-validation-pipeline"
version = "0.1.0"
description = "Fintech data quality validation and PII masking pipeline lab."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.0",
    "pandera>=0.18.0",
    "loguru>=0.7.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "black>=24.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]